[gd_scene load_steps=2 format=3 uid="uid://661xyqnpspxl"]

[ext_resource type="Script" path="res://scene/ui/tallants/reset_tallants_popup.gd" id="1_4nixg"]

[node name="ResetTallantsPopup" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_4nixg")

[node name="BlockingPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -555.0
offset_top = -280.0
offset_right = 557.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = -86.0
offset_right = 216.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
alignment = 1

[node name="Cost" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Вы уверены, что хотите сбросить таланты?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonYes" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Да"

[node name="ButtonNo" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Нет"
